优化 Config、Downloader、HexSync、HttpUtil 和 RequestHandler 中的代码结构，简化逻辑和提高可读性